--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:sqlserver://DESKTOP-UBCA7OK;databaseName=procesoSeleccion
+spring.datasource.url=jdbc:sqlserver://DESKTOP-4PSBNP7;databaseName=procesoSeleccion
 spring.datasource.username=anmursas
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 server.port=8090
 spring.jpa.hibernate.ddl-auto=update
-ps.app.jwtSecret=SecretKey
-ps.app.jwtExpirationMs=600000
+ps.app.jwtSecret=TV4ZS0G71YoBEO4057I0oLLwf2F5U3vI
+ps.app.jwtExpirationMs=100000000
