--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@devexpress/dx-react-chart": "^3.0.2",
@@ -17,6 +18,7 @@
     "@mui/styles": "^5.6.0",
     "@mui/x-data-grid": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.0",
+    "@nivo/core": "^0.79.0",
     "@nivo/pie": "^0.79.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -25,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
@@ -37,6 +40,7 @@
     "react-select": "^5.2.2",
     "react-validation": "^3.0.7",
     "react-window": "^1.8.6",
+    "universal-cookie": "^4.0.4",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
@@ -44,7 +48,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-localhost": "PUBLIC_URL=/ react-scripts build"
   },
   "eslintConfig": {
     "extends": [
