--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://DEN-00773PC;databaseName=procesoSeleccion
+spring.datasource.url=jdbc:sqlserver://DESKTOP-4PSBNP7;databaseName=procesoSeleccion
 spring.datasource.username=anmursas
 spring.datasource.password=1234
 spring.jpa.show-sql=true
