--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
