--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 server.port=8090
 spring.jpa.hibernate.ddl-auto=update
 ps.app.jwtSecret=TV4ZS0G71YoBEO4057I0oLLwf2F5U3vI
-ps.app.jwtExpirationMs=100000000
+ps.app.jwtExpirationMs=1800000
 
 
 
